<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">MoodTracker</string>

	<string name="labelTitle">MoodTracker</string>
	<string name="labelSad">Sad</string>
	<string name="labelHappiness">Happiness</string>
	<string name="labelTiredness">Tiredness</string>
	<string name="labelHopeful">Hopeful</string>
	<string name="labelStress">Stress</string>
	<string name="labelSecure">Secure</string>
	<string name="labelAnxiety">Anxiety</string>
	<string name="labelProductive">Productive</string>
	<string name="labelLoved">Loved</string>
	<string name="noteFieldDefault">Comment</string>
	<string name="buttonSubmitHandler">buttonSubmitHandler</string>
	<string name="buttonSubmitName">Save mood</string>
	<string name="toastSubmitText">Mood saved!</string>
	<string name="settingsStatusText">Database entries:</string>
	<string name="settingsClearDbText">Clear database</string>
	<string name="settingsSaveDbText">Export database as text file</string>
	<string name="settingsButtonsHandler">settingsButtonsHandler</string>
	<string name="moodRecordTitle">Mood Record</string>
	<string name="settingsSaveSqlFile">Export database as SQL file</string>
	<string name="defaultTableName">moods</string>
	<string name="settingsDefaultTableName">Table name</string>
    <string name="defaultUserName">user</string>
    <string name="settingsDefaultUserName">User name</string>
	<string name="infoString">This application is for tracking your mood and exporting the results to a text or sql file.</string>
	<string name="madByString">Made by</string>
	<string name="authorString">http://avp-ptr.de</string>
</resources>
