<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
<TextView android:text="@string/settingsStatusText" android:id="@+id/TextViewStatus"
	android:layout_height="wrap_content" android:layout_width="fill_parent"
	android:gravity="center"></TextView>

<Button android:text="@string/settingsClearDbText"
	android:layout_height="wrap_content" android:layout_width="fill_parent"
	android:id="@+id/ButtonClearDb" android:layout_margin="10px" android:onClick="@string/settingsButtonsHandler"></Button>
<Button android:text="@string/settingsSaveDbText"
	android:layout_height="wrap_content" android:layout_width="fill_parent"
	android:id="@+id/ButtonSaveDbAsText" android:layout_margin="10px" android:onClick="@string/settingsButtonsHandler"></Button>

</LinearLayout>
